--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -4,7 +4,11 @@ html{
   height 100%
 }
 body{
-  height 100%
-  margin 0
+  position absolute
+  top 0
+  left 0
+  right 0
+  bottom 0
+  margin 32px
   padding 0
 }
