use camelCase file names

--- a/src/scripts/pianoRollTemplate.pug
+++ b/src/scripts/pianoRollTemplate.pug
@@ -4,4 +4,6 @@
       .pianoroll-keyboard
       .pianoroll-roll-viewport
         .pianoroll-roll-page
+          .pianoroll-roll-keys
+          .pianoroll-roll-time
       .pianoroll-cursor
