--- a/src/scripts/pianoRollTemplate.pug
+++ b/src/scripts/pianoRollTemplate.pug
@@ -6,4 +6,5 @@
         .pianoroll-roll-page
           .pianoroll-roll-keys
           .pianoroll-roll-time
+          .pianoroll-notes
       .pianoroll-cursor
