allow notes move

--- a/src/scripts/pianoRollTemplate.pug
+++ b/src/scripts/pianoRollTemplate.pug
@@ -1,10 +1,10 @@
-.pianoroll
-  .pianoroll-viewport
-    .pianoroll-page
-      .pianoroll-keyboard
-      .pianoroll-roll-viewport
-        .pianoroll-roll-page
-          .pianoroll-roll-keys
-          .pianoroll-roll-time
-          .pianoroll-notes
-      .pianoroll-cursor
+div.pianoroll
+  div.pianoroll-viewport
+    div.pianoroll-page
+      div.pianoroll-keyboard
+      div.pianoroll-roll-viewport
+        div.pianoroll-roll-page
+          div.pianoroll-roll-keys
+          div.pianoroll-roll-time
+          div.pianoroll-notes
+      div.pianoroll-cursor
