allow to delete notes

--- a/src/styles/piano-roll.styl
+++ b/src/styles/piano-roll.styl
@@ -92,6 +92,8 @@
   width 300%
   height var(--keyboard-height)
   position relative
+  .is-erasing &
+    cursor no-drop
 .pianoroll-roll-keys
 .pianoroll-roll-time
   pointer-events none
