--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,11 +1,11 @@
-html{
+html
   padding 0
   margin 0
   height 100%
   background-color #101c28
   color #f
-}
-body{
+
+body
   position absolute
   top 0
   left 0
@@ -13,4 +13,3 @@ body{
   bottom 0
   margin 32px
   padding 0
-}
