--- a/src/styles/piano-roll.styl
+++ b/src/styles/piano-roll.styl
@@ -1,9 +1,9 @@
 .pianoroll
 .pianoroll *
 .pianoroll *:before
-.pianoroll *:after{
+.pianoroll *:after
   box-sizing border-box
-}
+
 .pianoroll
   width 100%
   height 100%
@@ -15,6 +15,7 @@
   --key-count 127
   --line-width 1px
   --cursor-pos 30
+
 .pianoroll-viewport
   position absolute
   top 0
@@ -33,6 +34,7 @@
   position relative
   min-height 100%
   height var(--keyboard-height)
+
 .pianoroll-cursor
   background-color #c4c6
   pointer-events none
@@ -41,6 +43,7 @@
   left 0
   right 0
   height var(--key-size)
+
 .pianoroll-keyboard
   background-color #ccc
   --white1-bg:  repeating-linear-gradient(to top, black, black var(--line-width), transparent 0, transparent var(--octave-size))
@@ -132,7 +135,7 @@
     left 0px bottom calc(var(--key-size) * 10)
 .pianoroll-roll-time
   background-image:
-    linear-gradient(to right, #0ff4, #0ff0 8px),
+    linear-gradient(to right, #000f, #0008 3px,#0000 4px),
     repeating-linear-gradient(
       to right, #999, #999 var(--line-width), transparent 0, transparent calc(var(--zoom-x)*var(--x-sub)*1px)),
     repeating-linear-gradient(to right, #777, #777 var(--line-width), transparent 0, transparent calc(var(--zoom-x)*1px))
@@ -161,12 +164,22 @@
       cursor grabbing
     .is-resizing &
       cursor: ew-resize
-    >.resizer
+    >.resize-handle
       position absolute
       top 0
       right 0
       bottom 0
       width 50%
-      max-width 5px
-      background-color red
+      max-width 10px
+      transform translateX(50%)
       cursor ew-resize
+      &:after
+        content ''
+        display block
+        position absolute
+        top 0
+        left 0
+        right 50%
+        bottom 0
+        background-color red
+
