--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -4,8 +4,15 @@ html
   height 100%
   background-color #101c28
   color #f
+  font-family Noto Sans, sans-serif
+  a
+    color #ccc
 
 body
+  padding 0
+  margin 0
+
+main
   position absolute
   top 0
   left 0
@@ -13,3 +20,28 @@ body
   bottom 0
   margin 32px
   padding 0
+  
+header
+  margin 0 32px
+  h1
+    font-size 1em
+    margin 0
+    padding 0
+    line-height 1.3
+    letter-spacing 0.024em
+  h2
+    font-size .5em
+    margin 0
+    padding 0
+    line-height 0.6
+
+footer
+  position absolute
+  bottom 0
+  right 0
+  margin 0 32px
+  font-size .8em
+  line-height 2.8
+  p
+    margin 0
+    padding 0
