--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -5,6 +5,7 @@ html
   background-color #101c28
   color #f
   font-family Noto Sans, sans-serif
+
   a
     color #ccc
 
@@ -20,17 +21,19 @@ main
   bottom 0
   margin 32px
   padding 0
-  
+
 header
   margin 0 32px
+
   h1
     font-size 1em
     margin 0
     padding 0
     line-height 1.3
     letter-spacing 0.024em
+
   h2
-    font-size .5em
+    font-size 0.5em
     margin 0
     padding 0
     line-height 0.6
@@ -40,8 +43,9 @@ footer
   bottom 0
   right 0
   margin 0 32px
-  font-size .8em
+  font-size 0.8em
   line-height 2.8
+
   p
     margin 0
     padding 0
